# rust-nhl-stats-api

./: .gitignore  Cargo.toml  README.md  nhl-openapi-3.0.yaml  regenerate.sh  updates.sh
docs/: Conference.md  Conferences.md  ConferencesApi.md  Division.md  DivisionConference.md  Divisions.md  DivisionsApi.md  Draft.md  DraftApi.md  DraftDrafts.md  DraftPicks.md  DraftProspect.md  DraftProspectAmateurLeague.md  DraftProspectAmateurTeam.md  DraftProspectPrimaryPosition.md  DraftProspectProspectCategory.md  DraftProspects.md  DraftRounds.md  DraftTeam.md  EnumExpandSchedule.md  EnumExpandTeams.md  EnumStandingTypes.md  EnumStatTypes.md  Error.md  Franchise.md  Game.md  GameBoxscore.md  GameBoxscoreTeam.md  GameBoxscoreTeamCoaches.md  GameBoxscoreTeamOnIcePlus.md  GameBoxscoreTeamPerson.md  GameBoxscoreTeamPlayers.md  GameBoxscoreTeamPlayersPerson.md  GameBoxscoreTeamPlayersPosition.md  GameBoxscoreTeamPlayersStats.md  GameBoxscoreTeamPlayersStatsSkaterStats.md  GameBoxscoreTeamPosition.md  GameBoxscoreTeamTeam.md  GameBoxscoreTeamTeamStats.md  GameBoxscoreTeamTeamStatsTeamSkaterStats.md  (+122 more)
src/: lib.rs  parameters.rs
src/apis/: client.rs  conferences_api.rs  draft_api.rs  games_api.rs  players_api.rs  standings_api.rs
src/async/: client.rs  conferences_api.rs  configuration.rs  divisions_api.rs  draft_api.rs  games_api.rs  mod.rs  players_api.rs  schedule_api.rs  standings_api.rs  stats_api.rs  teams_api.rs
src/models/: conference.rs  conferences.rs  division.rs  division_conference.rs  divisions.rs  draft.rs  draft_drafts.rs  draft_picks.rs  game.rs  (+145 more)
tests/: test.rs
(+12 files in other folders)
