[package]
name = "nhl-stats"
version = "0.1.0"
authors = ["Cory Forsstrom"]
description = "NHL Stats API client for rust created using openapi-generator"

[features]
default = ['sync', 'async']
sync = ['reqwest']
async = ['hyper', 'futures']

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = { version = "~0.9", optional = true }
hyper =  { version = "~0.11", optional = true }
futures = { version = "0.1.23", optional = true }

[dev-dependencies]
tokio-core = "*"

[package.metadata.docs.rs]
all-features = true