[package]
name = "nhl-stats"
version = "0.1.1"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
description = "NHL Stats API client for Rust created using openapi-generator"
license = "MIT"
repository = "https://github.com/tarkah/rust-nhl-stats-api"
readme = "README.md"
keywords = ["nhl", "api", "reqwest", "hyper", "openapi"]

[features]
default = ['sync', 'async']
sync = ['reqwest']
async = ['hyper', 'futures']

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = { version = "~0.9", optional = true }
hyper =  { version = "~0.11", optional = true }
futures = { version = "0.1.23", optional = true }

[dev-dependencies]
tokio-core = "0.1"

[package.metadata.docs.rs]
all-features = true